<resources>
    <string name="app_name">WeDigitTest</string>
    <string name="fragment_detail_movie">Fragment Detail Movie</string>
    <string name="fragment_splash">Splash</string>
    <string name="fragment_feed">Feed</string>
    <string name="the_moviedb_app">The MovieDB App</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="poster_of_the_movie">Poster of the Movie</string>
    <string name="storyline">Storyline</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="tagline">Tagline</string>
    <string name="genres">Genres</string>
    <string name="top_billed_cast">Top-Billed Cast</string>
    <string name="crew">Crew</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="budget">Budget</string>
    <string name="runtime">Runtime</string>
    <string name="production_companies">Production Companies</string>
    <string name="backdrop_poster">Backdrop Poster</string>
</resources>