<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splash_fragment">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.ironclad.wedigittest.view.fragments.SplashFragment"
        android:label="@string/fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/goToFeed"
            app:destination="@id/feed_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/feed_fragment"
        android:name="com.ironclad.wedigittest.view.fragments.FeedFragment"
        android:label="@string/fragment_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/goToDetailMovie"
            app:destination="@id/detail_movie_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/detail_movie_fragment"
        android:name="com.ironclad.wedigittest.view.fragments.MovieDetailFragment"
        android:label="@string/fragment_detail_movie"
        tools:layout="@layout/fragment_detail_movie">
        <argument
            android:name="movie_id"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

</navigation>