<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_detail_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="Title Movie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="@color/grey_200"
                android:textSize="15sp"
                tools:text="2019" />

            <TextView
                android:id="@+id/tvRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="@color/grey_200"
                android:textSize="15sp"
                tools:text="2hr 53min" />

            <TextView
                android:id="@+id/tvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:textColor="@color/grey_200"
                android:textSize="15sp"
                tools:text="Different Genres" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/grey_700"
            android:elevation="8dp"
            android:padding="14dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/storyline"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/plot_summary"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="Overview Here" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/tagline"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvTagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/grey_200"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="15sp"
                    tools:text="Overview Here" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/genres"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenresInMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/grey_700"
            android:elevation="8dp"
            android:padding="14dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/top_billed_cast"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/crew"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCrew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/grey_700"
            android:elevation="8dp"
            android:padding="14dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/details"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/release_date"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="release date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/budget"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="budget" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/runtime"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRuntimeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="budget" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/production_companies"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>