<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <ImageView
                android:id="@+id/image_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:contentDescription="@string/backdrop_poster"
                android:src="@drawable/gradient_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/image_backdrop"
                tools:text="Title Movie" />

            <LinearLayout
                android:id="@+id/llYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="2019" />

                <TextView
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="2hr 53min" />

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    tools:text="Different Genres" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvPlot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/grey_700"
                android:elevation="8dp"
                android:padding="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/llYear">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/storyline"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/plot_summary"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu"
                        android:textColor="@color/grey_200"
                        android:textSize="15sp"
                        tools:text="Overview Here" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/tagline"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvTagLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu"
                        android:textColor="@color/grey_200"
                        android:textSize="15sp"
                        tools:text="Overview Here" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCastAndCrew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/grey_700"
                android:elevation="8dp"
                android:padding="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/cvPlot">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/top_billed_cast"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/crew"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCrew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="15dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:backgroundTint="@color/grey_700"
                android:elevation="8dp"
                android:padding="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/cvCastAndCrew">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/details"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/release_date"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvRelease"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu"
                        android:textColor="@color/grey_200"
                        android:textSize="15sp"
                        tools:text="release date" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/budget"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu"
                        android:textColor="@color/grey_200"
                        android:textSize="15sp"
                        tools:text="budget" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/runtime"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvRuntimeDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ubuntu"
                        android:textColor="@color/grey_200"
                        android:textSize="15sp"
                        tools:text="budget" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/production_companies"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>